# public_content

./: .gitignore  .vale.ini  justfile  mdl_style.rb  mkdocs.yaml  org-md_postprocessor.py  org-md_preprocessor.py  pyproject.toml
content/: CNAME  README.md
content/misc/: about.md
content/posts/macro/: investing.md
content/posts/micro/: accrual_vs_cash.md  new_on_new.md
content/posts/nano/: index.md  just_vs_makefiles.md  risk-aversion-age.md
content/posts/projects/: index.md  knowledge.md
content/posts/tech/: emacs.md  index.md  python.md
content/stylesheets/: extra.css
docs/: .gitignore  README.md
docs/misc/: cv.md
docs/posts/macro/: index.md  investing.md
docs/posts/micro/: accrual_vs_cash.md  index.md  new_on_new.md
docs/posts/nano/: just_vs_makefiles.md
docs/posts/projects/: index.md  knowledge.md
docs/posts/tech/: emacs.md  index.md  python.md
theme_overrides/partials/: copyright.html
